--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "electron": "^4.1.4",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "simple-peer": "^9.3.0"
   }
 }
