--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "electron": "^4.1.4",
     "jquery": "^3.3.1",
-    "simple-peer": "^9.3.0"
+    "simple-peer": "^9.3.0",
+    "socket.io": "^2.2.0"
   }
 }
