--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "electron": "^4.1.4",
     "electron-edge-js": "^10.11.1",
-    "electron-webrtc": "^0.3.0",
     "jquery": "^3.3.1",
     "simple-peer": "^9.3.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "wrtc": "^0.3.7"
   }
 }
